todays day, populate days

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
     
     <div class="dates">
       <div class="month">
-        <div class="arrows prev-month">&lt;</div>
+        <div class="arrows prev-mth">&lt;</div>
         <div class="mth"></div>
-        <div class="arrows next-month">&gt;</div>
+        <div class="arrows next-mth">&gt;</div>
       </div>
+      <div class="days"></div>
     </div>
-
-    <div class="days"></div>
   </div>
 
   <script src="main.js"></script>
