--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="mth"></div>
         <div class="arrows next-mth">&gt;</div>
       </div>
+      <div class="week"></div>
       <div class="days"></div>
     </div>
   </div>
